<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProfiloGiocatore" >

    <ImageView
        android:id="@+id/imageGiocatore"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@android:drawable/btn_default" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageGiocatore"
        android:text="@string/nome"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/gnome"
        android:labelFor="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:text="@string/not"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gnome"
        android:text="@string/club"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/gclub"
        android:labelFor="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:text="@string/not"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gclub"
        android:text="@string/datanascita2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/gdata"
        android:labelFor="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:text="@string/not"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gdata"
        android:text="@string/nazionalita"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/gnazione"
        android:labelFor="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:text="@string/not"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gnazione"
        android:text="@string/altezzapeso"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/galtezzapeso"
        android:labelFor="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView5"
        android:text="@string/not"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/galtezzapeso"
        android:text="@string/ruolo"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/gruolo"
        android:labelFor="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView6"
        android:text="@string/not"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gruolo"
        android:text="@string/piede"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/gpiede"
        android:labelFor="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView7"
        android:text="@string/not"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gpiede"
        android:text="@string/valutazione"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/gvalore"
        android:labelFor="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView8"
        android:text="@string/not"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
