<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/procuratore"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textProcuratore"
        android:labelFor="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/inrosa"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textInrosa"
        android:labelFor="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/scadenza"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textScadenza"
        android:labelFor="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/proprietario"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textProprietario"
        android:labelFor="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/scadProprietario"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textScadProprietario"
        android:labelFor="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/valoreMercato"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.example.gadsoccer.DynamicTextView
        android:id="@+id/textValoreMercato"
        android:labelFor="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"/>

</LinearLayout>