<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:stretchColumns="1"
android:orientation="vertical"
android:id="@+id/categorias_table">

<!--ROW-->

    <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

<LinearLayout
    android:layout_height="0dp"
    android:layout_width="fill_parent"
    android:layout_weight="1"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/profilo"
        android:background="#CFECEC"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/categoria_image_1"
            android:src="@drawable/profilo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:text="@string/profilo"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_below="@+id/categoria_image_1"
            android:textAllCaps="true"
            android:textStyle="bold"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/daticarriera"
        android:background="#CFECEC"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/categoria_image_2"
            android:src="@drawable/daticarriera"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:text="@string/daticarriera"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_below="@+id/categoria_image_2"
            android:textAllCaps="true"
            android:textStyle="bold"/>

    </RelativeLayout>
</LinearLayout>
<!--END ROW-->
<!--ROW-->
<LinearLayout
    android:layout_height="0dp"
    android:layout_width="fill_parent"
    android:layout_weight="1"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/daticontrattuali"
        android:background="#CFECEC"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/categoria_image_3"
            android:src="@drawable/daticontrattuali"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:text="@string/daticontrattuali"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_below="@+id/categoria_image_3"
            android:textAllCaps="true"
            android:textStyle="bold"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/palmares"
        android:background="#CFECEC"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/categoria_image_4"
            android:src="@drawable/palmares"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:text="@string/palmares"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_below="@+id/categoria_image_4"
            android:textAllCaps="true"
            android:textStyle="bold"/>

    </RelativeLayout>
</LinearLayout>
<!--END ROW-->
<!--ROW-->
<LinearLayout
    android:layout_height="0dp"
    android:layout_width="fill_parent"
    android:layout_weight="1"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/biografia"
        android:background="#CFECEC"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/categoria_image_5"
            android:src="@drawable/biografia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:text="@string/biografia"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_below="@+id/categoria_image_5"
            android:textAllCaps="true"
            android:textStyle="bold"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/valori"
        android:background="#CFECEC"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/categoria_image_6"
            android:src="@drawable/pes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:text="@string/valori"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_below="@+id/categoria_image_6"
            android:textAllCaps="true"
            android:textStyle="bold"/>

    </RelativeLayout>
</LinearLayout>
<!--END ROW-->
<!--ROW-->
<LinearLayout
    android:layout_height="0dp"
    android:layout_width="fill_parent"
    android:layout_weight="1"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/video"
        android:background="#CFECEC"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/categoria_image_7"
            android:src="@drawable/youtube"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:text="@string/video"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_below="@+id/categoria_image_7"
            android:textAllCaps="true"
            android:textStyle="bold"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/news"
        android:background="#CFECEC"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/categoria_image_8"
            android:src="@drawable/news"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:text="@string/news"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_below="@+id/categoria_image_8"
            android:textAllCaps="true"
            android:textStyle="bold"/>

    </RelativeLayout>
</LinearLayout>
<!--END ROW-->
</LinearLayout>